force-app/Base/main/default/objects/Course_Delivery__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>LEFT(TEXT(Location__c), FIND(&quot;,&quot;,TEXT(Location__c))-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>