force-app/Base/main/default/objects/Course_Delivery__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>RIGHT(TEXT(Location__c), LEN(TEXT(Location__c))-FIND(&quot;,&quot;,TEXT(Location__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>