force-app/Base/main/default/objects/Course_Delivery__c/fields/Location__c.field-meta.xml
<CustomField>
	<fullName>Location__c</fullName>
	<description>City where a course will take place.</description>
	<label>Location</label>
	<type>Picklist</type>
	<valueSet>
		<controllingField>Region__c</controllingField>
		<valueSetDefinition>
			<value>
				<fullName>Tokyo, Japan</fullName>
			</value>
			<value>
				<fullName>Singapore, Singapore</fullName>
			</value>
			<value>
				<fullName>Paris, France</fullName>
			</value>
			<value>
				<fullName>London, United Kingdom</fullName>
			</value>
			<value>
				<fullName>Berlin, Germany</fullName>
			</value>
			<value>
				<fullName>San Francisco, United States</fullName>
			</value>
			<value>
				<fullName>Chicago, United States</fullName>
			</value>
			<value>
				<fullName>Toronto, Canada</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>